<resources>
    <string name="app_name">APParcial</string>
    <string name="terra_moda_inversiones">Terra Moda Inversiones</string>
    <string name="entrada_usuario">Entrada Usuario</string>
    <string name="ingresar_nombre">Ingrese su nombre</string>
    <string name="ingresar_apellido">Ingrese su apellido</string>
    <string name="ingresar_correo">Ingrese su correo</string>
    <string name="iniciar">Iniciar</string>
    <string name="ver_terminos_y_condiciones">Ver terminos y condiciones</string>
    <string name="bienvenido">Bienvenido!</string>
    <string name="tyc">Términos y Condiciones e-GRUPO9 – Persona Humana
A través de este servicio, GRUPO9 remite, por correo electrónico, por sí o a través de un tercero designado a tal efecto, los extractos de cuentas a la vista y resúmenes de tarjetas de crédito que actualmente el/la cliente/a adherido/a a e-GRUPO9 posea en GRUPO9 y/o los que en el futuro contrate, así como todo tipo de notificaciones, avisos, promociones y beneficios. Recibirá incluso comunicaciones de actualización y/o modificación en las comisiones y/o cargos de los productos que posea en GRUPO9 bajo su titularidad. En este caso, de no mediar rechazo expreso a partir de los sesenta (60) días contados desde la remisión de la comunicación, se asume conformidad.
El servicio e-GRUPO9 aplica a todos los productos que el/la cliente/a posea en GRUPO9, para los cuales GRUPO9 implemente su correspondencia en forma electrónica y para aquellos servicios o productos que en el futuro incorpore a e-GRUPO9. En tal sentido, GRUPO9 desistirá de remitir a el/la cliente/a la correspondencia vía correo postal, mientras no se ejerza posteriormente la opción por este último sistema de envío. La dirección de correo electrónico registrada podrá ser actualizada/modificada por el/la cliente/a a través de BIG9, llamando al Centro de Contacto 0810-222-2776 de lunes a viernes de 8:00 a 22:00 o acercándose a cualquier sucursal de GRUPO9. Podrá solicitar la desadhesión al servicio e-GRUPO9, lo que implica la renuncia a recepcionar vía correo electrónico, mencionado en el primer párrafo de los presentes términos y condiciones, y comenzar a recepcionarlos en papel vía correo postal. Dicha solicitud no implicará la baja de la dirección de correo electrónico a los efectos de continuar recibiendo información relacionada con los beneficios y promociones que ofrece GRUPO9, sin perjuicio del derecho que le asiste a solicitar la baja a esos efectos también, tal como se indica a continuación.
El/la cliente/a declara conocer y aceptar que en cualquier momento de la relación contractual podrá optar alternativamente por el sistema de información electrónica o por el sistema de envío postal, solicitándolo a través de BIG9/e-GRUPO9, llamando al Centro de Contacto al 0810-222-2776 de lunes a viernes de 8:00 a 22:00 o acercándose a cualquier sucursal de GRUPO9. En caso de que el/la cliente/a no desee recibir información sobre publicidades y/o promociones, sin perjuicio de continuar recibiendo la restante información relativa a GRUPO9, podrá solicitar dicha baja por los mismos medios indicados precedentemente, y/o a través del link que se incluye en el mismo correo electrónico recibido.
Debido a controles de seguridad del operador de correo electrónico de cada cliente/a, estos correos electrónicos podrían ser marcados como “no deseado/spam”. En este caso, el/la cliente/a deberá marcarlos como “correo seguro” para recibirlos normalmente en su buzón de entrada.
La clave aleatoria generada en forma automática por GRUPO9 deberá ser modificada en el primer ingreso de el/la cliente/a en BIG9. Esta nueva clave debe estar constituida por un mínimo de 8 (ocho) caracteres y un máximo de 30 (treinta), permitiéndose seleccionar letras mayúsculas, letras minúsculas, números o caracteres especiales, debiendo utilizar una combinación de por lo menos tres de estos grupos de caracteres. No se permite consignar el número de DNI. La clave no opera con vencimiento, y queda bajo la exclusiva responsabilidad de el/la cliente/a su actualización, en caso de que lo considere necesario. La misma es de uso personal y confidencial, y queda bajo la exclusiva responsabilidad de el/la cliente/a su correcto resguardo y protección.
Ante el olvido de esta clave, el/la cliente/a podrá generar una nueva a través de BIG9, validando su identidad a través del mecanismo vigente de preguntas y respuestas o a través del aplicativo BIG9 Token, según corresponda. La clave de acceso al servicio e-GRUPO9 será requerida para la apertura de aquellos archivos que contengan extractos de cuentas (Caja de Ahorros y Cuenta Corriente), mientras que los archivos que contengan resúmenes de tarjetas de crédito no requerirán su utilización.
En caso que el/la cliente/a desee solicitar la baja del servicio e-resumen tanto de VISA como de MasterCard, deberá gestionarlo desde el mismo canal en el que solicitó la adhesión: las páginas web de VISA, haciendo clic acá1 y/o MasterCard haciendo clic acá2.
El clic en SÍ ACEPTO importará mi expresa aceptación a todos y cada uno de los términos y condiciones indicados precedentemente y la constancia de haber tomado conocimiento y aceptado los términos y condiciones para la utilización de BIG9, haciendo clic acá3 y/o el sitio web de GRUPO9, haciendo clic acá4, como así también de haber obtenido toda la información necesaria para utilizar correctamente este medio, los riesgos derivados de su empleo y quién asume los mismos.
El clic en IMPRIMIR me permite obtener una copia del presente, cuyo texto también se encuentra disposición de el/la cliente/a en el sitio web de GRUPO9, haciendo clic acá5.</string>
    <string name="terminos_y_condiciones">Terminos y Condiciones</string>
    <string name="aceptar">Aceptar</string>
    <string name="denegar">Denegar</string>


    <string name="elija_banco">Elija un banco</string>
    <string name="elija_inversion">Elija un tipo de Inversion</string>
    <string name="tu_monto_a_retirar_sera_de">Tu monto a retirar sera de:</string>
    <string name="prueba">$prueba</string>
    <string name="invertiste">Invertiste:</string>
    <string name="en_el_banco">En el banco:</string>
    <string name="felicidades_carlos">Felicidades $Carlos</string>
    <string name="a_un_plazo_de">A un plazo de:</string>
    <string name="los_interese_ganados_son_de">Interes ganado:</string>
    <string name="volver_a_simulador">Volver a Simulador</string>
    <string name="el_tna_del_banco_es">El TNA del banco es:</string>
    <string name="el_roi_es">El ROI es de:</string>
    <string name="calcular_rendimiento">Calcular rendimiento</string>
    <string name="salir">Salir</string>
    <string name="ver_historial">Ver historial</string>
    <string name="ingrese_plazo_de_dias">Ingrese plazo de dias</string>
    <string name="ingrese_monto_a_invertir">Ingrese monto a invertir</string>
    <string name="que_inversi_n_desea_simular">¿Que inversiòn desea simular?</string>
    <string name="bienvenido_al_historial">Bienvenido al Historial</string>
    <string name="volver_al_simulador">Volver al Simulador</string>
    <string-array name="entradaBanco">
        <item>@string/elija_banco</item>
        <item>Banco Nacion</item>
        <item>Banco Santander</item>
        <item>Banco Galicia</item>
        <item>Banco BBVA</item>
        <item>Banco HSBC</item>
    </string-array>
    <string-array name="entradaInversion">
        <item>@string/elija_inversion</item>
        <item>plazo fijo</item>
        <item>FCI</item>
    </string-array>
</resources>
