<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="16dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/app_colores"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terra_moda_inversiones"
            android:layout_margin="20dp"
            android:textSize="20sp"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:text="@string/bienvenido"
        android:gravity="center_horizontal"
        />

    
    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:hint="@string/ingresar_nombre"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etApellido"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:hint="@string/ingresar_apellido"
        android:inputType="textPersonName" />
    
    
    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:hint="@string/ingresar_correo"
        android:inputType="textEmailAddress"
       />

    <CheckBox
        android:id="@+id/caja"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ver_terminos_y_condiciones"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:focusable="false"
        android:buttonTint="@color/checkbox_color"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnIniciar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iniciar"
        android:textColor="@color/white"
        android:background="@drawable/button_gradient"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />


    <!-- SOLO PARA PRUEBAS DESPUES VUELA -->
    <Button
        android:id="@+id/pruebasAHome"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Solo para pruebas HOME"
        />
    <!-- SOLO PARA PRUEBAS DESPUES VUELA -->

    <!-- SOLO PARA PRUEBAS DESPUES VUELA -->
    <Button
        android:id="@+id/pruebasARendimiento"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Solo para RENDIMIENTO"
        />
    <!-- SOLO PARA PRUEBAS DESPUES VUELA -->

    <!-- SOLO PARA PRUEBAS DESPUES VUELA -->
    <Button
        android:id="@+id/pruebasAHistorial"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Solo para HISTORIAL"
        />
    <!-- SOLO PARA PRUEBAS DESPUES VUELA -->

</LinearLayout>