<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terminos_y_condiciones"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp"
        />

    <!-- ScrollView para el texto largo -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/miTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tyc"
            android:padding="16dp"/>

    </ScrollView>

    <!-- LinearLayout para los botones, siempre visibles en la parte inferior -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/denegar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/denegar"
            android:textColor="@color/white"
            android:background="@drawable/button_gradient"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="30dp"
            />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/aceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aceptar"
            android:textColor="@color/white"
            android:background="@drawable/button_gradient"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />

    </LinearLayout>

</LinearLayout>
